# kms

./: .gitignore  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTOR_GUIDE.md  Cargo.toml  DESIGN.md  KMS分析-必要性-解决方案-副作用.md  KMS实现调研报告.md  LEVEL4_COMPLIANCE.md  README.md  TESTING.md  config-test-hsm.toml
.trellis/spec/backend/: auth-api-tokens.md  index.md
deploy/: hardening.md  kms.service  softhsm-test-setup.md  swtpm-test-setup.md
diagrams/: audit-chain.mmd  envelope-encryption.mmd  key-lifecycle.mmd  module-architecture.mmd  system-architecture.mmd
docs/level4/: configuration.md  hsm-deployment.md  level3-to-level4-migration.md  mtls-guide.md  overview.md  third-party-evaluation-checklist.md
research/: cosmian-kms-cli-command-tree.md  rust-backend-code-structure.md
src/: config.rs  lib.rs  main.rs
src/api/: error.rs  middleware.rs  mod.rs  mtls.rs  routes.rs
src/api/kmip/: auth.rs  codec.rs  dispatcher.rs  mod.rs  types.rs
src/approval/: mod.rs
src/audit/: logger.rs  mod.rs  non_repudiation.rs  reporter.rs  sqlite_store.rs  store.rs
src/auth/: mod.rs  reauth.rs  session.rs  token.rs  totp.rs
src/backup/: mod.rs
src/cli/: client.rs  config.rs  mod.rs  output.rs  types.rs
src/cli/cmds/: admin.rs  approvals.rs  audit.rs  auth.rs  configure.rs  crypto.rs  debug.rs  evidence.rs  health.rs  keys.rs  mod.rs  server.rs
src/crypto/: aes256_gcm_engine.rs  envelope.rs  hkdf_engine.rs  mod.rs  secure_mem.rs  sha256_engine.rs  sm2_engine.rs  sm3_engine.rs  sm4_engine.rs  traits.rs
src/evidence/: mod.rs
src/hsm/: mod.rs  pkcs11_provider.rs  sdf_provider.rs  software_provider.rs  traits.rs
src/key/: dependency.rs  manager.rs  mod.rs  store.rs  types.rs
src/monitor/: blocklist.rs  detector.rs  metrics.rs  mod.rs  rules.rs  syslog.rs
src/policy/: engine.rs  label.rs  mod.rs  roles.rs  types.rs
src/store/: migrations.rs  mod.rs  repository.rs
src/trust/: mod.rs  tpm.rs
src/trust/tpm/: software_tpm.rs  tss_tpm.rs
src/validation/: mod.rs
tests/cli/: lib.sh  run_all.sh  test_auth_full.sh  test_kms_cli.sh  test_local.sh  test_no_auth.sh  test_output.sh
