[package]
name = "kms"
version = "0.1.0"
edition = "2021"
description = "国密合规的密钥管理系统 (Key Management System with GM/T Standards)"
authors = ["KMS Team"]

[lib]
name = "kms"
path = "src/lib.rs"

[[bin]]
name = "kms-server"
path = "src/main.rs"

[[bin]]
name = "kms-cli"
path = "src/bin/kms_cli.rs"

[dependencies]
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
hyper = "1"
tokio-rustls = "0.26"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "auth", "request-id"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono", "migrate"] }
libsm = "0.6"
aes-gcm = "0.10"
cryptoki = { version = "0.6", optional = true }
rand = "0.8"
getrandom = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive", "env"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
secrecy = { version = "0.10", features = ["serde"] }
futures = "0.3"
tokio-util = "0.7"
parking_lot = "0.12"
dashmap = "5"
bytes = "1"
async-trait = "0.1"
toml = "0.8"
anyhow = "1"
# TOTP 双因素认证
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
# TLS / mTLS
rustls = "0.23"
rustls-pemfile = "2"
# 内存锁定（主机加固）
libc = "0.2"

# CLI HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# syslog 审计
syslog = { version = "6", optional = true }
log = { version = "0.4", optional = true }

# 监控指标
prometheus = { version = "0.13", optional = true }
tss-esapi = { version = "7.7.0", optional = true }

[features]
default = ["software-hsm", "sqlite"]
software-hsm = []
pkcs11-hsm = ["cryptoki"]
sdf-hsm = []
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
level3-compliant = []
monitoring = ["prometheus", "syslog", "log"]
tpm = ["tss-esapi"]  # 等保四级 TPM 2.0（对接 tss-esapi）

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
